# armasd-rs

./: .gitmodules  Cargo.toml
libarmasd-sys/: Cargo.toml  build.rs  lib.rs
src/: blas.rs  common.rs  dense.rs  lapack.rs  lib.rs  pivot.rs  tests.rs  vec.rs
