[package]
name = "armasd"
version = "0.1.0"
authors = ["Harri Rautila <harri.rautila@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Column major linear algebra package."
keywords = []

[dependencies]
libarmasd-sys = { version = "0.1.0", path = "libarmasd-sys" }
bitflags = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
